# ThroneEngine

./: .automerge.yml  .clang-format  .gitattributes  .gitignore  .mergify.yml  CMakeLists.txt  FileList.cmake  GenerateFakeCMakeLists.py  GenerateFileList.py  README.md  SETUP.md  Targets.cmake  VSGen.bat  azure-pipelines.yml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.md  documentation-improvement.md  help-or-questions.md  improvement.md  new-feature.md  repository-improvement.md
.github/workflows/: codeql-analysis.yml
CMakeBuild/: README.md
CmakeScripts/: SetupVcpkg.cmake
Vendors/: .gitignore  ReadMe.md
Vendors/Boost/boost_1_71_0/: REVISIONS.md
Vendors/Vendors/Boost/boost_1_71_0/: REVISIONS.md  (+1 more)
Vendors/Vendors/Catch2/: ParseAndAddCatchTests.cmake
Vendors/Vendors/Googletest/: BUILD_README.md
Vendors/Vendors/Utility/: README.txt
Vendors/Vendors/Vulkan/: WHEN_UPDATING.md
Vendors/Vendors/VulkanMemoryAllocator/: CMakeLists.txt  FileList.cmake  vk_mem_alloc.cpp
Vendors/Vendors/fmt/: BUILD_README.md  run-msbuild.bat
Vendors/Vendors/glm/: REVISIONS.md
Vendors/Vendors/stb/: REVISIONS.md
Vendors/glm/: REVISIONS.md
citools/: GenerateFileList.py
citools/CmakeScripts/: FetchDependencies.cmake  SetupVcpkg.cmake  TargetConfiguration.cmake  TargetCreation.cmake
citools/InstallVulkan/: InstallVulkan.ps1  SetVulkanSdkEnvVariable.ps1
citools/InstallVulkan/vulkan-sdk/: vulkan-sdk.nuspec
src/: FileList.cmake  GenerateFileList.py  TargetCmakeListsTemplate.txt  Targets.cmake  main.cpp
src/Audio/: CMakeLists.txt  FileList.cmake
src/Benchmarks/: BenchmarksMain.cpp  CMakeLists.txt  FileList.cmake
src/Core/: BaseComponent.cpp  BaseComponent.h  CMakeLists.txt  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  EventProcessor.cpp  EventProcessor.h  FileList.cmake  GenerateFileList.py  ISystem.h  ISystemFactory.h  ManagerList.cpp  ManagerList.h  SharedComponent.cpp  SharedComponent.h  System.h  SystemFactory.h
src/Core/Cameras/: FPCamera.cpp  FPCamera.h
src/Core/ComponentTypeTraits/: ComponentTypeTrait.cpp  ComponentTypeTrait.h  Dependencies.cpp  Dependencies.h
src/Core/Math/: Angle.h  Real.h  Transform.cpp  Transform.h
src/Graphics/: BufferLayout.h  CMakeLists.txt  FileList.cmake  GraphicsContext.cpp  GraphicsContext.h  GraphicsInstance.cpp  GraphicsInstance.h  Utility.h  VulkanContext.cpp  VulkanContext.h  VulkanContextFactory.cpp  VulkanContextFactory.h  VulkanContextFactoryFunctions.h  VulkanInitializer.cpp  VulkanInitializer.h
src/Graphics/BuildDependencies/: stb_image.cpp
src/Graphics/Images/: Image.cpp  Image.h
src/Graphics/Materials/: Material.cpp  Material.h  MaterialInfo.h
src/Graphics/Meshes/: Mesh.cpp  Mesh.h  MeshFilter.h  MeshRenderer.cpp  MeshRenderer.h
src/Graphics/Models/: GltfLoader.cpp  GltfLoader.h  Mesh.h  Model.cpp  Model.h  ModelLoader.h
src/Graphics/VulkanWrappers/: FrameBuffer.cpp  FrameBuffer.h  RenderPass.cpp  RenderPass.h  Swapchain.cpp  Swapchain.h  VertexBufferSignature.cpp  VertexBufferSignature.h
src/Graphics/VulkanWrappers/Bindable/: Bindable.h
src/Graphics/VulkanWrappers/Commands/: CommandBuffer.cpp  CommandBuffer.h  CommandBufferRecordScope.cpp  CommandBufferRecordScope.h  CommandPool.cpp  CommandPool.h  CommandQueue.cpp  CommandQueue.h  RenderPassRecordScope.cpp  RenderPassRecordScope.h
src/Graphics/VulkanWrappers/Descriptors/: Descriptor.cpp  Descriptor.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  ImageSampler.cpp  ImageSampler.h  UniformBuffer.cpp  UniformBuffer.h
src/Graphics/VulkanWrappers/Memory/: Buffer.cpp  Buffer.h  Image.cpp  Image.h  ImageView.cpp  ImageView.h  IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h  VmaAllocator.cpp  VmaAllocator.h  VmaUnique.h
src/Graphics/VulkanWrappers/Pipelines/: GraphicsPipeline.cpp  GraphicsPipeline.h  PipelineDynamicState.cpp  PipelineDynamicState.h
src/Graphics/VulkanWrappers/Shaders/: Shader.cpp  Shader.h
src/Graphics/VulkanWrappers/Syncronization/: Fence.cpp  Fence.h  FencePool.cpp  FencePool.h  Semaphore.cpp  Semaphore.h  SemaphorePool.cpp  SemaphorePool.h
src/ManualTesting/: CMakeLists.txt  FileList.cmake  GenerateFileList.py  main.cpp
src/Networking/: CMakeLists.txt  FileList.cmake
src/Pch/: CMakeLists.txt  FileList.cmake  pch.cpp  pch.h
src/Physics/: CMakeLists.txt  FileList.cmake
src/Samples/Graphics/: README.md
src/Standard/: Algorithm.h  Aliases.h  BaseManager.cpp  BaseManager.h  CMakeLists.txt  CompressedPair.h  FileList.cmake  IManagerFactory.h  Manager.h  ManagerFactory.h  Pointers.h  Task.h  TypeTraits.h
src/Standard/Math/: Angle.h  Real.h  Transform.cpp  Transform.h
src/Standard/Pointers/: BasePtr.h  Comparisons.h  EnableSharedFromThis.h  IsThronePtr.h  MakeFunctions.h  NotifiedPtr.h  PtrOwner.h  SharedPtr.h  WeakPtr.h  WeakPtr.hpp
src/Standard/Private/: Resource.h  TaskFence.h
src/Tests/CatchRunner/: CMakeLists.txt  CatchRunner.cpp  CatchRunner.h  FileList.cmake
src/Tests/RunTests/: CMakeLists.txt  FileList.cmake  main.cpp
src/Tests/TestCore/: CMakeLists.txt  FileList.cmake  MockComponent.h  TestAngle.cpp  TestCoreMain.cpp  TestDependencies.cpp  TestEntity.cpp  TestEventProcessor.cpp  TestManagerList.cpp  TestSystem.cpp  TestSystemFactory.cpp
src/Tests/TestGraphics/: CMakeLists.txt  FileList.cmake  TestGltfLoader.cpp  TestGraphicsMain.cpp  TestShader.cpp
src/Tests/TestStandard/: CMakeLists.txt  FileList.cmake  MockDeleter.h  MockNotifier.h  MockResource.h  TestAngle.cpp  TestCompressedPair.cpp  TestEnableSharedFromThis.cpp  TestManager.cpp  TestManagerFactory.cpp  TestPointers.cpp  TestResource.cpp  TestTask.cpp  TestTaskFence.cpp  main.cpp
src/Tests/TestTestFramework/: CMakeLists.txt  FileList.cmake  TestGMock.cpp  TestTestFramework.cpp  main.cpp
src/Tests/TestUtilities/: CMakeLists.txt  FileList.cmake  TestApplyIf.cpp  TestFiles.cpp  main.cpp
src/Tests/TestsUtilities/: CMakeLists.txt  FileList.cmake  Utilities.cpp
src/Utilities/: CMakeLists.txt  FileList.cmake  Files.cpp  Files.h  MemoryRegion.h  Overload.h  Utility.h
(+147 files in other folders)
